fix:adjusted styles and deleted unnecessary files. CV

--- a/src/pages/listUser/userListTable.css
+++ b/src/pages/listUser/userListTable.css
@@ -15,14 +15,16 @@ thead {
     width: 100%;
 }
 
-th, td {
+th,
+td {
     border: 1px solid #eaeaea;
     padding: 15px;
     text-align: left;
     flex: 1;
 }
 
-th h3, td h3 {
+th h3,
+td h3 {
     margin: 0;
 }
 
@@ -36,7 +38,7 @@ tr {
     flex-direction: row;
     color: #000;
     width: 100%;
-    
+
 }
 
 tr:hover {
