--- a/src/App.css
+++ b/src/App.css
@@ -2,16 +2,42 @@ body {
   margin: 0;
   padding: 0;
   height: 100vh;
-  background: #fff;
+  background-color: #fff;
+  font-family: 'Roboto', sans-serif;
+}
+
+ul {
+  list-style: none;
+  display: flex;
+  padding: 15px;
+  justify-content: space-around;
+  margin: 0;
+}
+
+li {
+  margin: 0;
 }
 
 .container {
+  background-color: #e7f6fd;
+  width: 60%;
+  margin: 3rem auto;
+  border-radius: 10px;
+  box-shadow: 10px 10px 4px 0px rgba(0, 0, 0, 0.3);
   display: flex;
   flex-direction: column;
-  margin: auto;
-  margin-top: 200px;
-  background-color: #fff;
-  padding-bottom: 30px;
-  margin-bottom: 0px;
+}
 
+.input {
+  display: flex;
+  align-items: center;
+  margin: auto;
+  width: 480px;
+  height: 80px;
+  background: rgb(34, 59, 102);
+  border-radius: 6px;
+}
+
+.input:hover {
+  background-color: rgb(111, 144, 200);
 }
