--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -1,28 +1,17 @@
-.container {
-    background-color: #fff;
-    margin: 0;
+.navbar-container {
+    background-color: #3c009d;
 }
 
-ul {
-    list-style: none;
-    display: flex;
-    padding: 15px;
-    justify-content: space-around;
-    margin: 0;
-}
 
-li {
-    margin: 0;
-}
 
 .NavLink {
     text-decoration: none;
-    color: #8f8282;
+    color: #fff;
     font-size: 18px;
     font-weight: 700;
     transition: color 0.3s ease-in-out;
 }
 
 .NavLink:hover {
-    color: #eaeaea;
+    color: #938787;
 }
