--- a/src/pages/login/loginForm.css
+++ b/src/pages/login/loginForm.css
@@ -1,6 +1,9 @@
-
-
-
+.container {
+    background-color: #e7f6fd;
+    width: 60%;
+    margin: 3rem auto;
+    border-radius: 10px;
+}
 
 .header {
     display: flex;
@@ -9,7 +12,6 @@
     gap: 9px;
     width: 100%;
     margin-top: 30px;
-
 }
 
 .text {
@@ -30,29 +32,52 @@
     display: flex;
     flex-direction: column;
     gap: 25px;
-
-}
-
-.input {
-    display: flex;
-    align-items: center;
-    margin: auto;
-    width: 480px;
-    height: 80px;
-    background: #eaeaea;
-    border-radius: 6px;
 }
 
 .input img {
-    margin: 0px 30px;
+    margin: 0px 10px;
+}
+
+.input {
+    margin-bottom: .9rem;
 }
 
 .input input {
     height: 50px;
-    width: 400px;
+    width: 100%;
+    max-width: 400px;
+    box-sizing: border-box;
     background: transparent;
     border: none;
     outline: none;
     color: #797979;
     font-size: 19px;
+    text-align: center;
+    cursor: pointer;
+}
+
+.input-submit {
+    width: auto;
+    margin: 0 auto;
+}
+
+/* Puntos de quiebre */
+@media screen and (max-width: 768px) {
+    .container {
+        width: 80%;
+    }
+
+    .text {
+        font-size: 36px;
+    }
+}
+
+@media screen and (max-width: 480px) {
+    .container {
+        width: 90%;
+    }
+
+    .text {
+        font-size: 24px;
+    }
 }
