--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,3 @@
-body {
-  margin: 0;
-  padding: 0;
-  height: 100vh;
-  background-color: #fff;
-  font-family: 'Roboto', sans-serif;
-}
 
 ul {
   list-style: none;
@@ -19,11 +12,11 @@ li {
 }
 
 .container {
-  background-color: #e7f6fd;
+  background-color: var(--secondary-background);
   width: 60%;
   margin: 3rem auto;
   border-radius: 10px;
-  box-shadow: 10px 10px 4px 0px rgba(0, 0, 0, 0.3);
+  box-shadow: var(--primary-shadow);
   display: flex;
   flex-direction: column;
 }
@@ -34,10 +27,10 @@ li {
   margin: auto;
   width: 480px;
   height: 80px;
-  background: rgb(34, 59, 102);
+  background: var(--primary-color);
   border-radius: 6px;
 }
 
 .input:hover {
-  background-color: rgb(111, 144, 200);
+  background-color: var(--primary-hover);
 }
