--- a/src/pages/login/loginForm.css
+++ b/src/pages/login/loginForm.css
@@ -1,5 +1,5 @@
 .container {
-    background-color: #e7f6fd;
+    background-color: var(--primary-background);
     width: 60%;
     margin: 3rem auto;
     border-radius: 10px;
@@ -15,7 +15,7 @@
 }
 
 .text {
-    color: #3c009d;
+    color: var(--primary-color);
     font-size: 48px;
     font-weight: 700;
 }
@@ -23,7 +23,7 @@
 .underline {
     width: 61px;
     height: 6px;
-    background: #3c009d;
+    background: var(--primary-color);
     border-radius: 9px;
 }
 
@@ -50,7 +50,7 @@
     background: transparent;
     border: none;
     outline: none;
-    color: #797979;
+    color: var(--secondary-hover);
     font-size: 19px;
     text-align: center;
     cursor: pointer;
